# gameboard

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: main.yaml
scripts/: __init__.py  download.py
tests/: __init__.py  test_download.py
