[project]
name = "gameboard"
version = "0.1.0"
description = "The new look Game Board"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [ "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.13" ]
dependencies = [ "requests" ]

[dependency-groups]
dev = [ "pytest" ]

[tool.ruff]
lint.select = [ "ALL" ]
lint.ignore = [
  "COM812", # missing-trailing-comma
  "D203",   # incorrect-blank-line-before-class
  "D213",   # multi-line-summary-second-line
  "S314",   # suspicious-xml-element-tree-usage
]
lint.per-file-ignores."test_*.py" = [
  "S101", # use-of-assert
]
lint.fixable = [ "ALL" ]
lint.unfixable = [  ]

[tool.basedpyright]
typeCheckingMode = "strict"
